--- a/templates/login.html
+++ b/templates/login.html
@@ -77,12 +77,12 @@
                                     <div class="mb-3 form-group">
                                         <i class="iconsax" data-icon="mail"></i>
                                         <label for="emailid" class="form-label">Email ID</label>
-                                        <input type="email" placeholder="Enter your mail id" class="form-control" name="emailid">
+                                        <input type="email" placeholder="Enter your mail id" class="form-control" name="emailid" required>
                                     </div>
                                     <div class="mb-2 form-group">
                                         <i class="iconsax" data-icon="lock-2"></i>
                                         <label for="password" class="form-label">Password</label>
-                                        <input placeholder="Enter your password" type="password" class="form-control" name="password">
+                                        <input placeholder="Enter your password" type="password" class="form-control" name="password" required>
                                     </div>
                                     <br>             
                                     <p style="text-align: center;">Alternatively, log in using Face ID.</p>
