--- a/templates/chat.html
+++ b/templates/chat.html
@@ -8,6 +8,9 @@
     <meta name="description" content="megabot">
     <meta name="keywords" content="megabot">
     <meta name="author" content="megabot">
+    <!-- Include Font Awesome for icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 <link rel="icon" href="{% static 'assets/images/favicon.png' %}" type="image/x-icon" />
 <link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" type="image/x-icon" />
 <title>Chat</title>
@@ -36,6 +39,14 @@
 
 </head>
 <style>
+        .modal-dialog {
+            max-width: 720px;
+        }
+        .modal-content {
+            width: 100%;
+            height: 445px;
+        }
+
 .gg-play-button-o {
     box-sizing: border-box;
     position: relative;
@@ -172,6 +183,9 @@
 
                                 <ul class="inner-links-list" id="innerLink">
                                     <li class="active"><a href="#!" data-title="Ask anything">Ask anything</a></li>
+                                    <!-- <li><a href="#!" data-title="Image generator">Drone Camera</a></li> -->
+                                     <li><a href="#" data-toggle="modal" data-target="#videoModal" data-title="Drone Footage">Drone Camera</a></li>
+
                                     <li><a href="#!" data-title="Image generator">Image generator</a></li>
                                     <li><a href="#!" data-title="Essay writer">Essay writer</a></li>
                                 </ul>
@@ -876,6 +890,34 @@
         </div>
     </div>
 
+    <div style="color: cyan;" class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content" style="background-color: #252525;">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="videoModalLabel">Drone Camera</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="#" width="100%" height="100%" />
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn" onclick="takePicture()">
+                        <i class="fas fa-camera"></i>
+                    </button>
+                    <button type="button" class="btn" id="startRecordingButton" onclick="startRecording()">
+                        <i class="fas fa-video"></i>
+                    </button>
+                    <button type="button" class="btn" id="stopRecordingButton" onclick="stopRecording()" style="display: none;">
+                        <i class="fas fa-stop"></i>
+                    </button>
+                    <span id="batteryIndicator" class="ml-3"></span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!--custom cursor start  -->
     <div id="cursor"></div>
     <div id="cursor-border"></div>
@@ -904,6 +946,24 @@
 
     <!--AXJS-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+
+
+<script>
+            function updateBattery() {
+            fetch("")
+                .then(response =&gt; response.json())
+                .then(data =>; {
+                    document.getElementById('batteryIndicator').innerText = 'Battery: ' + data.battery + '%';
+                });
+        }
+</script>
+
+
+
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -974,22 +1034,22 @@
 
     <script>
         document.onkeydown = (e) => {
-    if (e.key == 123) {
-        e.preventDefault();
-    }
-    if (e.ctrlKey && e.shiftKey && e.key == 'I') {
-        e.preventDefault();
-    }
-    if (e.ctrlKey && e.shiftKey && e.key == 'C') {
-        e.preventDefault();
-    }
-    if (e.ctrlKey && e.shiftKey && e.key == 'J') {
-        e.preventDefault();
-    }
-    if (e.ctrlKey && e.key == 'U') {
-        e.preventDefault();
-    }
-    };
+            if (e.key == 123) {
+                e.preventDefault();
+            }
+            if (e.ctrlKey && e.shiftKey && e.key == 'I') {
+                e.preventDefault();
+            }
+            if (e.ctrlKey && e.shiftKey && e.key == 'C') {
+                e.preventDefault();
+            }
+            if (e.ctrlKey && e.shiftKey && e.key == 'J') {
+                e.preventDefault();
+            }
+            if (e.ctrlKey && e.key == 'U') {
+                e.preventDefault();
+            }
+            };
     </script>
     <script>
     document.addEventListener('contextmenu', function(event) {
