--- a/templates/chat.html
+++ b/templates/chat.html
@@ -890,33 +890,33 @@
         </div>
     </div>
 
-    <div style="color: cyan;" class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content" style="background-color: #252525;">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="videoModalLabel">Drone Camera</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <img src="#" width="100%" height="100%" />
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn" onclick="takePicture()">
-                        <i class="fas fa-camera"></i>
-                    </button>
-                    <button type="button" class="btn" id="startRecordingButton" onclick="startRecording()">
-                        <i class="fas fa-video"></i>
-                    </button>
-                    <button type="button" class="btn" id="stopRecordingButton" onclick="stopRecording()" style="display: none;">
-                        <i class="fas fa-stop"></i>
-                    </button>
-                    <span id="batteryIndicator" class="ml-3"></span>
-                </div>
+<div style="color: cyan;" class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content" style="background-color: #252525;">
+            <div class="modal-header">
+                <h5 class="modal-title" id="videoModalLabel">Drone Camera</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <img id="droneVideo" src="#" width="100%" height="100%" />
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" onclick="takePicture()">
+                    <i class="fas fa-camera"></i>
+                </button>
+                <button type="button" class="btn" id="startRecordingButton" onclick="startRecording()">
+                    <i class="fas fa-video"></i>
+                </button>
+                <button type="button" class="btn" id="stopRecordingButton" onclick="stopRecording()" style="display: none;">
+                    <i class="fas fa-stop"></i>
+                </button>
+                <span id="batteryIndicator" class="ml-3"></span>
             </div>
         </div>
     </div>
+</div>
 
     <!--custom cursor start  -->
     <div id="cursor"></div>
@@ -951,16 +951,27 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 
-
 <script>
-            function updateBattery() {
-            fetch("")
-                .then(response =&gt; response.json())
-                .then(data =>; {
-                    document.getElementById('batteryIndicator').innerText = 'Battery: ' + data.battery + '%';
-                });
-        }
+    // Function to update the drone video feed
+    function updateDroneVideo() {
+        // Make an AJAX request to fetch the latest frame from the drone
+        $.ajax({
+            url: '/get_drone_frame', // URL to your Django view that fetches the drone frame
+            method: 'GET',
+            success: function(data) {
+                // Update the src attribute of the img tag with the received frame
+                $('#droneVideo').attr('src', 'data:image/jpeg;base64,' + data);
+            },
+            error: function(xhr, status, error) {
+                console.error('Error fetching drone frame:', error);
+            }
+        });
+    }
+
+    // Call the updateDroneVideo function every second to continuously update the video feed
+    setInterval(updateDroneVideo, 1000);
 </script>
+
 
 
 
