--- a/templates/chat.html
+++ b/templates/chat.html
@@ -183,8 +183,7 @@
 
                                 <ul class="inner-links-list" id="innerLink">
                                     <li class="active"><a href="#!" data-title="Ask anything">Ask anything</a></li>
-                                    <!-- <li><a href="#!" data-title="Image generator">Drone Camera</a></li> -->
-                                     <li><a href="#" data-toggle="modal" data-target="#videoModal" data-title="Drone Footage">Drone Camera</a></li>
+                                    <li><a href="#" data-toggle="modal" data-target="#videoModal" data-title="Drone Footage">Drone Camera</a></li>
 
                                     <li><a href="#!" data-title="Image generator">Image generator</a></li>
                                     <li><a href="#!" data-title="Essay writer">Essay writer</a></li>
@@ -890,7 +889,8 @@
         </div>
     </div>
 
-<div style="color: cyan;" class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel" aria-hidden="true">
+
+<div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content" style="background-color: #252525;">
             <div class="modal-header">
@@ -912,11 +912,19 @@
                 <button type="button" class="btn" id="stopRecordingButton" onclick="stopRecording()" style="display: none;">
                     <i class="fas fa-stop"></i>
                 </button>
-                <span id="batteryIndicator" class="ml-3"></span>
+                                    <span id="batteryIndicator" class="ml-3">
+    <i class="fas fa-battery-full"></i> <span id="batteryLevel">100</span>%
+</span>
             </div>
         </div>
     </div>
 </div>
+
+
+
+
+
+
 
     <!--custom cursor start  -->
     <div id="cursor"></div>
@@ -951,26 +959,46 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 
-<script>
-    // Function to update the drone video feed
-    function updateDroneVideo() {
-        // Make an AJAX request to fetch the latest frame from the drone
-        $.ajax({
-            url: '/get_drone_frame', // URL to your Django view that fetches the drone frame
-            method: 'GET',
-            success: function(data) {
-                // Update the src attribute of the img tag with the received frame
-                $('#droneVideo').attr('src', 'data:image/jpeg;base64,' + data);
-            },
-            error: function(xhr, status, error) {
-                console.error('Error fetching drone frame:', error);
-            }
-        });
-    }
+    <script>
+        var updateInterval;
 
-    // Call the updateDroneVideo function every second to continuously update the video feed
-    setInterval(updateDroneVideo, 1000);
-</script>
+        function updateDroneVideo() {
+            $.ajax({
+                url: '/get_drone_frame',
+                method: 'GET',
+                success: function(data) {
+                    $('#droneVideo').attr('src', 'data:image/jpeg;base64,' + data);
+                },
+                error: function(xhr, status, error) {
+                    console.error('Error fetching drone frame:', error);
+                }
+            });
+        }
+
+        $('#videoModal').on('show.bs.modal', function (e) {
+            updateInterval = setInterval(updateDroneVideo, 1000);
+        });
+
+        $('#videoModal').on('hide.bs.modal', function (e) {
+            clearInterval(updateInterval);
+        });
+
+        function takePicture() {
+            console.log("Taking picture...");
+        }
+
+        function startRecording() {
+            console.log("Starting recording...");
+            $('#startRecordingButton').hide();
+            $('#stopRecordingButton').show();
+        }
+
+        function stopRecording() {
+            console.log("Stopping recording...");
+            $('#stopRecordingButton').hide();
+            $('#startRecordingButton').show();
+        }
+    </script>
 
 
 
