--- a/templates/login.html
+++ b/templates/login.html
@@ -98,6 +98,7 @@
                                     <div class="text-end">
                                         <a data-cursor="pointer" href="{% url 'forgot1' %}">Forget Password?</a>
                                     </div>
+                                    <input type="hidden" name="ip_address" id="ipAddressa">
                                     <button type="submit" class="btn-solid w-100 text-center mt-3">Log me in</button>
                                 </form>
                             </div>
@@ -134,6 +135,7 @@
                                         Please wait a few seconds after clicking "Signup" for the Face ID scan. 
                                         If you don't have a camera, you can still log in using your email.<a data-cursor="pointer"></a>
                                     </h4>
+                                    <input type="hidden" name="ip_address" id="ipAddress">
                                     <button type="submit" class="btn-solid w-100 text-center mt-4">Sign up</button>
                                 </form>
                             </div>
@@ -218,6 +220,28 @@
         e.preventDefault();
     }
     };
+    </script>
+        <script>
+        fetch('https://api.ipify.org?format=json')
+            .then(response => response.json())
+            .then(data => {
+                const ipAddress = data.ip;
+                document.getElementById('ipAddress').value = ipAddress;
+                document.getElementById('ipAddressa').value = ipAddress;
+                
+            })
+            .catch(error => {
+                console.error('Error fetching IP address:', error);
+            });
+
+        // Ensure CSRF token is included in AJAX requests (if needed)
+        $(document).ready(function() {
+            $.ajaxSetup({
+                headers: {
+                    'X-CSRFToken': '{{ csrf_token }}'
+                }
+            });
+        });
     </script>
 </body>
 </html>
