--- a/templates/chat.html
+++ b/templates/chat.html
@@ -807,15 +807,15 @@
                 <button type="button" class="btn" onclick="takePicture()">
                     <i class="fas fa-camera"></i>
                 </button>
-                <button type="button" class="btn" id="startRecordingButton" onclick="startRecording()">
+<!--                 <button type="button" class="btn" id="startRecordingButton" onclick="startRecording()">
                     <i class="fas fa-video"></i>
                 </button>
                 <button type="button" class="btn" id="stopRecordingButton" onclick="stopRecording()" style="display: none;">
                     <i class="fas fa-stop"></i>
-                </button>
-                <span style="color: white;" id="batteryIndicator" class="ml-3">
+                </button> -->
+<!--                 <span style="color: white;" id="batteryIndicator" class="ml-3">
                     <i class="fas fa-battery-full"></i> <span id="batteryLevel">100</span>%
-                </span>
+                </span> -->
             </div>
         </div>
     </div>
