--- a/templates/chat.html
+++ b/templates/chat.html
@@ -10,6 +10,8 @@
     <meta name="author" content="megabot">
     <!-- Include Font Awesome for icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
+
 
 <link rel="icon" href="{% static 'assets/images/favicon.png' %}" type="image/x-icon" />
 <link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" type="image/x-icon" />
@@ -45,7 +47,7 @@
         }
         .modal-content {
             width: 100%;
-            height: 490px;
+            height: 545px;
         }
 
 .gg-play-button-o {
@@ -152,14 +154,26 @@
                                 role="tab" aria-controls="help" aria-selected="false"><i class="iconsax" data-icon="question-message
                                 "></i> <span>Help</span> </button>
                         </li> -->
-                        <li data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Ratings" class="nav-item"
-                            role="presentation">
-                            <button type="button" class="btn btn-primary nav-link" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop"><i class="iconsax" data-icon="star"></i> <span>
-                                    Rating
-                                </span>
-                            </button>
-                        </li>
+
+<li data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Ratings" class="nav-item" role="presentation">
+    <button type="button" class="btn btn-primary nav-link" data-bs-toggle="modal" data-bs-target="#staticBackdrop" onmouseover="changeColorOnHover(this)" onmouseout="restoreColor(this)">
+        <i class="bi bi-camera" style="color: #fff; transition: color 0.3s;">
+        </i>
+        <span>Rating</span>
+    </button>
+    <script>
+        function changeColorOnHover(element) {
+            var icon = element.querySelector('i');
+            icon.style.color = '#3BEDB2';
+        }
+        function restoreColor(element) {
+            var icon = element.querySelector('i');
+            icon.style.color = '#fff';
+        }
+    </script>
+</li>
+
+
                         <li data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Settings" class="nav-item"
                             role="presentation">
                             <button class="nav-link" data-bs-toggle="tab" data-bs-target="#settings" type="button"
@@ -191,21 +205,16 @@
                                     <input type="text" class="form-control" id="searchInput" placeholder="Search here..">
                                 </div>
 
-
-
-
                                 <ul class="inner-links-list" id="innerLink">
                                     <li class="active"><a href="#!" data-title="Ask anything">Ask anything</a></li>
-                                    <li><a href="#" data-toggle="modal" data-target="#videoModal" data-title="Drone Footage">Drone Camera</a></li>
+                                    <!-- <li><a href="#" data-toggle="modal" data-target="#videoModal" data-title="Drone Footage">Drone Camera</a></li> -->
 
 
                                     <li><a href="#!" data-title="Image generator">Image generator</a></li>
                                     <li><a href="#!" data-title="Essay writer">Essay writer</a></li>
+                                    <li><a href="#!" data-title="Essay writer">Text Summarizer</a></li>
+                                    <li><a href="#!" data-title="Essay writer">Topic Modeller</a></li>
                                 </ul>
-                        
-
-
-
 
                             </div>
                         </div>
@@ -796,36 +805,12 @@
 
                 <img id="drone-video" src="" alt="Tello Drone Video Feed">
 
-<!--                 <div class="modal-footer">
-                    <button type="button" class="modal-submit m-0" data-bs-dismiss="modal">Send</button>
-                </div> -->
+                 <div class="modal-footer">
+                    <button type="button" class="modal-submit m-0" data-bs-dismiss="modal">Take Picture</button>
+                </div> 
             </div> 
         </div>
     </div>
-
-
-<div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content" style="background-color: #252525;">
-            <div class="modal-header">
-                <h5 class="modal-title" id="videoModalLabel">Drone Camera</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body d-flex justify-content-center align-items-center" style="height: 400px;">
-                    
-                <!-- <video id="droneVideo" autoplay width="100%" height="100%"></video> -->
-                <p id="noVideoMessage" style="display: none; color: red; text-align: center;">No Video detected</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn" onclick="takePicture()">
-                    <i class="fas fa-camera"></i>
-                </button>
-            </div>
-        </div>
-    </div>
-</div> 
 
 
 
