--- a/templates/chat.html
+++ b/templates/chat.html
@@ -804,9 +804,9 @@
 
                 <img id="drone-video" src="" alt="Tello Drone Video Feed">
 
-                 <div class="modal-footer">
+<!--                  <div class="modal-footer">
                     <button type="button" class="modal-submit m-0" id="takePictureBtn" data-bs-dismiss="modal">Take Picture</button>
-                </div> 
+                </div>  -->
             </div> 
         </div>
     </div>
